# GRU

./: .gitignore  ADMIN_MANIFEST.res  Cargo.toml  LICENSE  README.md  arguments.txt  aria2c_bundle_RUS.7z  build.bat  build.ps1  my_compiler.ps1  script.bat
src/: downloader.rs  get_version.rs  json.rs  main.rs  main_func.rs  new_args_parser.rs  windows.rs
src_ru/: downloader.rs  get_version.rs  json.rs  main.rs  main_func.rs
