[package]
name = "gru"
version = "2.3.0"
edition = "2021"
authors = ["Zalexanninev15 <blue.shark@disroot.org>"]
license = "MIT License"
description = "Updater for applications from GitHub"
repository = "https://github.com/Zalexanninev15/GRU"
documentation = "https://github.com/Zalexanninev15/GRU#usage"

[dependencies]
execute = "0.2.13"
winconsole = "0.11.1"
press-btn-continue = "0.2.0"
arguments = "0.7.2"
isahc = "1.7.2"
serde_json = { version = "1.0.125", default-features = false, features = [
  "alloc",
] }
trauma = "2.2.5"
console = "0.15.8"
tokio = "1.39.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1