[package]
name = "gru"
version = "2.3.0-2025.26"
edition = "2021"
authors = ["Zalexanninev15 <blue.shark@disroot.org>"]
license = "MIT License"
description = "Updater for applications from GitHub"
repository = "https://github.com/Zalexanninev15/GRU"
documentation = "https://github.com/Zalexanninev15/GRU#usage"
#build = "build.rs"

#[[bin]]
#name = "GRU"
#path = "build.rs"

# [target.'cfg(windows)'.build-dependencies]
# winres = "0.1"

[dependencies]
execute = "0.2.13"
winconsole = "0.11.1"
press-btn-continue = "0.2.0"
arguments = "0.8.0"
isahc = "1.7.2"
serde_json = { version = "1.0.114", default-features = false, features = [
  "alloc",
] }
trauma = "2.2.4"
console = "0.15.8"
tokio = "1.36.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
debug = false

#[package.metadata.winres]
#FileDescription = "Updater for applications from GitHub"
#OriginalFilename = "GRU.exe"
#LegalCopyright = "Copyright © 2022-2024"
#ProductName = "GRU"
#ProductVersion = "2.3.0"
